Complete MyIntegrationTest Fix Junit 5 and plugin version conflict cause 'no tests found to run'