@@ -2,19 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.github</groupId>
+    <artifactId>blog-previewer</artifactId>
+    <version>0.0.1</version>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.github</groupId>
-    <artifactId>blog-previewer</artifactId>
-    <version>0.0.1</version>
-    <name>blog-previewer</name>
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -67,14 +69,14 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.2</version>
+            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.2</version>
+            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -115,8 +117,10 @@
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>2.22.1</version>
                 <configuration>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
                     <excludes>
                         <exclude>**/*IntegrationTest</exclude>
                     </excludes>
@@ -125,7 +129,7 @@
 
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>2.22.0</version>
                 <configuration>
                     <includes>
                         <include>**/*IntegrationTest</include>
@@ -198,9 +202,9 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>6.4.1</version>
                 <configuration>
+                    <url>jdbc:mysql://localhost:3306/blog?useSSL=false&amp;allowPublicKeyRetrieval=true</url>
                     <user>root</user>
                     <password>root</password>
-                    <url>jdbc:mysql://localhost:3306/blog?useSSL=false&amp;allowPublicKeyRetrieval=true</url>
                 </configuration>
                 <executions>
                     <execution>
@@ -210,9 +214,9 @@
                             <goal>migrate</goal>
                         </goals>
                         <configuration>
+                            <url>jdbc:mysql://localhost:3307/blog?useSSL=false&amp;allowPublicKeyRetrieval=true</url>
                             <user>root</user>
                             <password>root</password>
-                            <url>jdbc:mysql://localhost:3307/blog?useSSL=false&amp;allowPublicKeyRetrieval=true</url>
                         </configuration>
                     </execution>
                 </executions>
